# gpt-pp

./: .gitignore  .python-version  LICENSE  README.md  cli_chat.py  cli_engineer.py  cli_pr_review.py  config.py  db.py  llm.py  pyproject.toml  requirements.txt  test_regex.py
gpt-engineer/steps/: __init__.py  clarify.py
gpt-engineer/utils/: FileWrapper.py
gpt_engineer/: FileManager.py  MemoryManager.py  WrappedFile.py  llm.py  memory.py  system.py  ui.py  utils.py
gpt_engineer/chains/: __init__.py  ask_for_clarification.py  follow_instructions.py  get_imported_file_paths.py  write_code.py
gpt_engineer/steps/: __init__.py  build_initial_prompt.py  clarify.py  clarify_instructions.py  initialize.py  retrieve_files.py  run.py  run_clarified.py  write_code.py  write_code_to_files.py
gpt_pp/: ChatMemory.py  FileManager.py  WrappedFile.py  chat_memory.py  file_manager.py  file_utils.py  llm.py  system.py  ui.py  wrapped_file.py
gpt_pp/ai/: __init__.py  ask_for_clarification.py  generate_diff.py  generate_file_content.py  get_files_that_require_changes.py  get_imported_file_paths.py  llm.py  parsers.py  templates.py  write_code.py
gpt_pp/chains/: __init__.py  get_imported_file_paths.py  write_code.py
gpt_pp/steps/: __init__.py  build_initial_prompt.py  clarify_instructions.py  get_authenticated_user.py  get_pr_details.py  initialize.py  post_pr_review.py  provide_feedback.py  retrieve_files.py  write_code_to_files.py
logs/: default
scripts/: pretty_print_logs.py
steps/: run.py  run_clarified.py
utils/: FileManager.py  __init_.py  chat_to_files.py
workspace/: file  project  prompt
